add check/discover
